--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,27 @@ header {
     text-align: center;
     padding: 20px;
 }
+
+nav {
+    margin-top: 10px;
+    display: flex;
+    flex-grow: 1;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+nav ul li {
+    padding: 5px 10px;
+}
+
 main {
     padding: 20px;
 }
