--- a/W03/coolpics.css
+++ b/W03/coolpics.css
@@ -98,9 +98,40 @@ footer {
     border-color: whitesmoke;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
     object-fit: cover;
+    cursor: pointer;
 }
 
+.viewer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.75);
+    display: grid;
+    place-items: center;
+    z-index: 1000;
+}
 
+.viewer img {
+    max-height: 75%;
+    max-width: 75%;
+    object-fit: contain;
+}
+
+.close-viewer {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 1.5em;
+    background: none;
+    border: none;
+    color: var(--text-light);
+    cursor: pointer;
+}
+.hide {
+    display: none;
+}
 
 @media screen and (min-width: 700px) {
     .gallery {
@@ -127,6 +158,20 @@ footer {
     #menu-button {
         display: none;
     }
+
+    nav.menu {
+        display: flex !important;
+    }
+    
+    .viewer {
+        margin: 25px;
+        padding: 10px;
+    }
+    .viewer img {
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -140,5 +185,16 @@ footer {
     nav ul li {
         margin-right: 50px;
         margin-left: 50px;
+    }
+
+    .viewer {
+        margin: 25px;
+        padding: 10px;
+    }
+
+    .viewer img {
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
     }
 }
