--- a/W05/Blog/blog.css
+++ b/W05/Blog/blog.css
@@ -31,6 +31,21 @@ h1 {
     font-size: 60px;
 }
 
+.skiptocontent a {
+    position: absolute;
+    top: -40px;
+    left: 0;
+    background-color: var(--gold);
+    color: var(--dark);
+    padding: 10px;
+    text-decoration: none;
+    z-index: 100;
+}
+
+.skiptocontent a:focus {
+    top: 0;
+}
+
 nav ul {
     list-style: none;
     padding: 20px;
