--- a/W11-13/kbportfolio/styles/projects.css
+++ b/W11-13/kbportfolio/styles/projects.css
@@ -67,7 +67,6 @@ main {
     padding: 20px;
     border-radius: 10px;
     margin: 20px 0;
-    order: -1;
 }
 
 .project-content h2 {
@@ -85,52 +84,48 @@ main {
     margin-bottom: 20px;
 }
 
-#filter {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
+.select-container {
+    text-align: center;
+    margin-top: 10px;
     color: #9e9e9e;
-    background-color: rgba(31, 7, 7, 0.9);
-    border: 1px solid #9e9e9e;
+}
+
+select {
     padding: 10px;
     border-radius: 5px;
-    transition: background-color 0.3s, color 0.3s;
-    margin-top: 20px;
-}
-
-label[for="filter"] {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
+    border: none;
+    background-color: #333333;
     color: #9e9e9e;
-    margin-right: 10px;
-}
-
-#filter:hover {
-    background-color: #444444;
-    color: #0f0d0e;
-}
-
-#filter:focus {
+    font-size: 16px;
     outline: none;
-    background-color: #555555;
-    color: #0f0d0e;
-    border: 1px solid #777777;
+    margin-left: 10px;
 }
 
+select option {
+    background-color: #333333;
+    color: #9e9e9e;
+}
 
 .column-container {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     margin-top: 20px;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .column {
-    flex: 0 0 calc(33.33% - 20px);
+    flex: 0 1 30%;
+    max-width: 30%;
     background-color: rgba(37, 7, 7, 0.9);
     padding: 20px;
     border-radius: 10px;
     box-sizing: border-box;
     margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .column h3 {
@@ -172,6 +167,7 @@ label[for="filter"] {
     color: #0f0d0e;
     text-decoration: underline;
 }
+
 
 footer {
     background-color: #333333;
