--- a/W11-13/kbportfolio/styles/styles.css
+++ b/W11-13/kbportfolio/styles/styles.css
@@ -74,6 +74,16 @@ main {
     max-width: 100%;
 }
 
+#greeting {
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    color: #9e9e9e;
+    margin-top: 20px;
+    text-align: center;
+}
+
+
 .p-container {
     background-color: rgba(31, 7, 7, 0.9);
     padding: 20px;
@@ -157,12 +167,24 @@ main {
     text-decoration: underline;
 }
 
-/* Fallback colors for older browsers */
-.form-container,
-.p-container,
-#headshot-container {
-    background-color: #1f0707;
-    background-color: rgba(31, 7, 7, 0.9);
+#contact-form .download-link {
+    background-color: #555555;
+    color: #9e9e9e;
+    padding: 15px 25px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+    border: none;
+    cursor: pointer;
+    display: inline-block;
+    text-align: center;
+}
+
+#contact-form .download-link:hover {
+    background-color: #999999;
+    border-radius: 10px;
+    color: #0f0d0e;
+    text-decoration: underline;
 }
 
 footer {
